# Gold

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  SConstruct  binding.gyp  circle.yml  package-lock.json  package.json  sonar-project.properties
CMakeModules/: CodeCoverage.cmake
argparser/: argparser.hpp
cplusplus/Gold/argparser/: argparser.cpp
cplusplus/Gold/math/calculus/: calculus.cpp  calculus.hpp
cplusplus/Gold/math/expression/: expression.cpp  expression_test.cxx
cplusplus/Gold/math/utils/: utils.hpp  utils_test.cxx
cplusplus/Gold/new_math/simplify/: simplify.cpp  simplify.cpp~  simplify.hpp  simplify.hpp~  simplify_test.cxx  simplify_test.cxx~
cplusplus/Gold/new_math/utils/: test  utils.cpp  utils.hpp  utils_test.cxx  utils_test.cxx~
cplusplus/Gold/rectangle/: rectangle.hpp
include/Gold/bindings/: expression.hpp
include/Gold/math/: exception.hpp  expression.hpp  function.hpp  node.hpp  utils.hpp  variable.hpp
math/expression/: expression.hpp
math/utils/: utils.cpp
rectangle/: rectangle.cpp  rectangle.hpp
src/cplusplus/Gold/math/expression/: expression.cpp  expression.hpp  variable.cpp  variable.hpp
src/cplusplus/Gold/math/node/: node.cpp  node_test.cxx
src/cplusplus/Gold/math/utils/: utils.cpp
src/cplusplus/bindings/: expression.cpp
src/cplusplus/math/expression/: expression.cpp  expression_test.cpp  expression_test.cxx  variable.cpp
src/cplusplus/math/function/: function.cpp  function_test.cpp  function_test.cxx
src/cplusplus/math/node/: node.cpp  node_test.cpp  node_test.cxx
src/cplusplus/math/utils/: utils.cpp  utils_test.cpp  utils_test.cxx
src/cplusplus/node_bindings/: function.hpp  functionAddon.cpp
test/cplusplus/math/node/: node.cpp
